--- a/Builds/MacOSX/OpenEphys.xcworkspace/xcshareddata/xcschemes/All.xcscheme
+++ b/Builds/MacOSX/OpenEphys.xcworkspace/xcshareddata/xcschemes/All.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0720"
-   version = "1.8">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -65,20 +65,6 @@
                BuildableName = "BasicSpikeDisplay.bundle"
                BlueprintName = "BasicSpikeDisplay"
                ReferencedContainer = "container:Plugins/BasicSpikeDisplay/BasicSpikeDisplay.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E1D300271DAEBBBD0050E0F8"
-               BuildableName = "BinaryWriter.bundle"
-               BlueprintName = "BinaryWriter"
-               ReferencedContainer = "container:Plugins/BinaryWriter/BinaryWriter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -159,38 +145,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E1F558CF1C9B23370035F88B"
-               BuildableName = "KWIKFormat.bundle"
-               BlueprintName = "KWIKFormat"
-               ReferencedContainer = "container:Plugins/KWIKFormat/KWIKFormat.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "E1F558F51C9B28060035F88B"
                BuildableName = "LfpDisplayNode.bundle"
                BlueprintName = "LfpDisplayNode"
                ReferencedContainer = "container:Plugins/LfpDisplayNode/LfpDisplayNode.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D3E60EE41CD19893003FDF5C"
-               BuildableName = "LfpDisplayNodeAlpha.bundle"
-               BlueprintName = "LfpDisplayNodeAlpha"
-               ReferencedContainer = "container:Plugins/LfpDisplayNodeAlpha/LfpDisplayNodeAlpha.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -219,20 +177,6 @@
                BuildableName = "NetworkEvents.bundle"
                BlueprintName = "NetworkEvents"
                ReferencedContainer = "container:Plugins/NetworkEvents/NetworkEvents.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E1F91DE31DBE670500FF13EA"
-               BuildableName = "NWBFormat.bundle"
-               BlueprintName = "NWBFormat"
-               ReferencedContainer = "container:Plugins/NWBFormat/NWBFormat.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -347,13 +291,26 @@
                ReferencedContainer = "container:Plugins/IntanRecordingController/IntanRecordingController.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E1D300271DAEBBBD0050E0F8"
+               BuildableName = "BinaryFormat.bundle"
+               BlueprintName = "BinaryFormat"
+               ReferencedContainer = "container:Plugins/BinaryFormat/BinaryFormat.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
